--- a/ansible/templates/nginx/site.conf.j2
+++ b/ansible/templates/nginx/site.conf.j2
@@ -20,8 +20,7 @@ server {
         if ($http_x_case_study != "Kadmos") {
             return 404;
         }
-        proxy_pass https://kubernetes; 
-        proxy_set_header Host $http_host;
+        proxy_pass http://kubernetes; 
     } 
 }
 
